# tracer

./: .gitignore  LICENSE  README  stack.yaml  tracer.cabal
app/: Main.hs
src/: Tracer.hs
src/Data/: Angle.hs
src/Data/Vector/: Class.hs  Fancy.hs
src/Data/Vector/Transform/: Fancy.hs
src/Tracer/: Base.hs  Camera.hs  Default.hs  Geometry.hs  Intersection.hs  Light.hs  Material.hs  Ray.hs  Render.hs  Sampler.hs  Scene.hs  Vec.hs
src/Tracer/Geometry/: AABB.hs  BHV.hs  Circle.hs  GeoInstance.hs  Plane.hs  Sphere.hs  Triangle.hs  Utility.hs
src/Tracer/Light/: AmbientLight.hs  AreaLight.hs  DirLight.hs  PointLight.hs
src/Tracer/Material/: Emissive.hs  Glossy.hs  Mirror.hs  Phong.hs  Transparent.hs
src/Tracer/Screen/: Pinhole.hs
src/Tracer/Texture/: Checker.hs  MonoColor.hs
test/Tracer/: GeometrySpec.hs  MaterialSpec.hs  ScreenSpec.hs
