name:                tracer
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/tracer#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Tracer,
                       Tracer.Base,
                       Tracer.Default,
                       Tracer.Vec,
                       Tracer.Sampler,
                       Tracer.Ray,
                       Tracer.Intersection,
                       Tracer.Camera,
                       Tracer.Scene,
                       Tracer.Render,
                       Tracer.Material,
                       Tracer.Material.Emissive,
                       Tracer.Material.Phong,
                       Tracer.Material.Mirror,
                       Tracer.Material.Transparent,
                       Tracer.Screen.Pinhole,
                       Tracer.Geometry,
                       Tracer.Geometry.Triangle,
                       Tracer.Material.Glossy,
                       Tracer.Geometry.Circle,
                       Tracer.Geometry.Sphere,
                       Tracer.Geometry.Plane,
                       Tracer.Geometry.AABB,
                       Tracer.Geometry.BHV,
                       Tracer.Geometry.GeoInstance,
                       Tracer.Texture.MonoColor,
                       Tracer.Texture.Checker,
                       Tracer.Light,
                       Tracer.Light.PointLight,
                       Tracer.Light.DirLight,
                       Tracer.Light.AmbientLight,
                       Tracer.Light.AreaLight,
                       Data.Vector.Class,
                       Data.Vector.Transform.T3,
                       Data.Vector.V3,
                       Data.Vector.Fancy,
                       Data.Vector.Transform.Fancy,
                       Data.Angle
  build-depends:       base >= 4.7 && < 5,
                       JuicyPixels,
                       convertible,
                       STL,
                       vector, vector-algorithms,
                       mtl, primitive, transformers,
                       MonadRandom, random, mersenne-random-pure64,
                       parallel, monad-parallel
  default-language:    Haskell2010

executable tracer-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2
  build-depends:       base,
                       tracer,
                       JuicyPixels, vector,
                       attoparsec, bytestring
  default-language:    Haskell2010

test-suite tracer-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base,
                       tracer,
                       hspec, QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/tracer
